--- a/app/views/projects/show.rhtml
+++ b/app/views/projects/show.rhtml
@@ -1,7 +1,6 @@
 <h2><%=l(:label_overview)%></h2> 
 	
 <div class="splitcontentleft">
-	<%= textilizable @project.description %>	
 	<ul>
 	<% unless @project.homepage.blank? %><li><%=l(:field_homepage)%>: <%= link_to(h(@project.homepage), @project.homepage) %></li><% end %>
   <% if @subprojects.any? %>
@@ -32,9 +31,6 @@
   </div>
   <% end %>
   <%= call_hook(:view_projects_show_left, :project => @project) %>
-</div>
-
-<div class="splitcontentright">
   <% if @users_by_role.any? %>
 	<div class="box">
 		<h3 class="icon22 icon22-users"><%=l(:label_member_plural)%></h3>	
@@ -52,6 +48,29 @@
   </div>  
   <% end %>
   <%= call_hook(:view_projects_show_right, :project => @project) %>
+
+  <%= textilizable @project.description %>	
+</div>
+
+<div class="splitcontentright">
+	<div id="activity">
+	<% @events_by_day.keys.sort.reverse.each do |day| %>
+	<h3><%= format_activity_day(day) %></h3>
+	<dl>
+	<% @events_by_day[day].sort {|x,y| y.event_datetime <=> x.event_datetime }.each do |e| -%>
+	  <dt class="<%= e.event_type %>  <%= User.current.logged? && e.respond_to?(:event_author) && User.current == e.event_author ? 'me' : nil %>">
+		<%= avatar(e.event_author, :size => "24") if e.respond_to?(:event_author) %>
+	  <span class="time"><%= format_time(e.event_datetime, false) %></span>
+	  <%= content_tag('span', h(e.project), :class => 'project') if @project.nil? || @project != e.project %>
+	  <%= link_to format_activity_title(e.event_title), e.event_url %></dt>
+	  <dd><span class="description"><%= format_activity_description(e.event_description) %></span>
+	  <span class="author"><%= e.event_author if e.respond_to?(:event_author) %></span></dd>
+	<% end -%>
+	</dl>
+	<% end -%>
+	</div>
+
+	<%= content_tag('p', l(:label_no_data), :class => 'nodata') if @events_by_day.empty? %>
 </div>
 
 <% content_for :sidebar do %>
