--- a/app/views/welcome/index.rhtml
+++ b/app/views/welcome/index.rhtml
@@ -1,37 +1,90 @@
 <h2><%= l(:label_home) %></h2>
 
 <div class="splitcontentleft">
-  <%= textilizable Setting.welcome_text %>
-  <% if @news.any? %>
-  <div class="box">
-	<h3><%=l(:label_news_latest)%></h3>
-		<%= render :partial => 'news/news', :collection => @news %>
-		<%= link_to l(:label_news_view_all), :controller => 'news' %>
-  </div>
-  <% end %>
-  <%= call_hook(:view_welcome_index_left, :projects => @projects) %>
-</div>
-
-<div class="splitcontentright">
-    <% if @projects.any? %>
+	<% if @projects.any? %>
 	<div class="box">
-	<h3 class="icon22 icon22-projects"><%=l(:label_project_latest)%></h3>
+		<h3 class="icon22 icon22-projects"><%=l(:label_project_latest)%></h3>
 		<ul>
-		<% for project in @projects %>
+			<% for project in @projects %>
 			<li>
-			<%= link_to h(project.name), :controller => 'projects', :action => 'show', :id => project %> (<%= format_time(project.created_on) %>)
-			<%= textilizable project.short_description, :project => project %>
+				<%= link_to h(project.name), :controller => 'projects', :action => 'show', :id => project %> (<%= format_time(project.created_on) %>)
+				<%= textilizable project.short_description, :project => project %>
 			</li>
-		<% end %>
+			<% end %>
 		</ul>
 	</div>
 	<% end %>
-    <%= call_hook(:view_welcome_index_right, :projects => @projects) %>
+	<%= call_hook(:view_welcome_index_right, :projects => @projects) %>
+	<%= textilizable Setting.welcome_text %>
+	<% if @news.any? %>
+	<div class="box">
+		<h3><%=l(:label_news_latest)%></h3>
+		<%= render :partial => 'news/news', :collection => @news %>
+		<%= link_to l(:label_news_view_all), :controller => 'news' %>
+	</div>
+	<% end %>
+	<%= call_hook(:view_welcome_index_left, :projects => @projects) %>
+</div>
+
+<div class="splitcontentright">
+	<div id="activity">
+	<% @events_by_day.keys.sort.reverse.each do |day| %>
+	<h3><%= format_activity_day(day) %></h3>
+	<dl>
+	<% @events_by_day[day].sort {|x,y| y.event_datetime <=> x.event_datetime }.each do |e| -%>
+	  <dt class="<%= e.event_type %>  <%= User.current.logged? && e.respond_to?(:event_author) && User.current == e.event_author ? 'me' : nil %>">
+		<%= avatar(e.event_author, :size => "24") if e.respond_to?(:event_author) %>
+	  <span class="time"><%= format_time(e.event_datetime, false) %></span>
+	  <%= content_tag('span', h(e.project), :class => 'project') if @project.nil? || @project != e.project %>
+	  <%= link_to format_activity_title(e.event_title), e.event_url %></dt>
+	  <dd><span class="description"><%= format_activity_description(e.event_description) %></span>
+	  <span class="author"><%= e.event_author if e.respond_to?(:event_author) %></span></dd>
+	<% end -%>
+	</dl>
+	<% end -%>
+	</div>
+
+	<%= content_tag('p', l(:label_no_data), :class => 'nodata') if @events_by_day.empty? %>
+
+	<div style="float:left;">
+	<%= link_to_remote(('&#171; ' + l(:label_previous)), 
+	                   {:update => "content", :url => params.merge(:from => @date_to - @days - 1), :method => :get, :complete => 'window.scrollTo(0,0)'},
+	                   {:href => url_for(params.merge(:from => @date_to - @days - 1)),
+	                    :title => l(:label_date_from_to, :start => format_date(@date_to - 2*@days), :end => format_date(@date_to - @days - 1))}) %>
+	</div>
+	<div style="float:right;">
+	<%= link_to_remote((l(:label_next) + ' &#187;'), 
+	                   {:update => "content", :url => params.merge(:from => @date_to + @days - 1), :method => :get, :complete => 'window.scrollTo(0,0)'},
+	                   {:href => url_for(params.merge(:from => @date_to + @days - 1)),
+	                    :title => l(:label_date_from_to, :start => format_date(@date_to), :end => format_date(@date_to + @days - 1))}) unless @date_to >= Date.today %>
+	</div>
+	&nbsp;
+
+	<% content_for :header_tags do %>
+	<%= auto_discovery_link_tag(:atom, params.merge(:format => 'atom', :from => nil, :key => User.current.rss_key)) %>
+	<% end %>
+
+	<% content_for :sidebar do %>
+	<% form_tag({}, :method => :get) do %>
+	<h3><%= l(:label_activity) %></h3>
+	<p><% @activity.event_types.each do |t| %>
+	<%= check_box_tag "show_#{t}", 1, @activity.scope.include?(t) %>
+	<%= link_to(l("label_#{t.singularize}_plural"), {"show_#{t}" => 1, :user_id => params[:user_id]})%>
+	<br />
+	<% end %></p>
+	<% if @project && @project.descendants.active.any? %>
+	    <p><label><%= check_box_tag 'with_subprojects', 1, @with_subprojects %> <%=l(:label_subproject_plural)%></label></p>
+	    <%= hidden_field_tag 'with_subprojects', 0 %>
+	<% end %>
+	<%= hidden_field_tag('user_id', params[:user_id]) unless params[:user_id].blank? %>
+	<p><%= submit_tag l(:button_apply), :class => 'button-small', :name => nil %></p>
+	<% end %>
+	<% end %>
 </div>	
 
 <% content_for :header_tags do %>
-<%= auto_discovery_link_tag(:atom, {:controller => 'news', :action => 'index', :key => User.current.rss_key, :format => 'atom'},
-                                   :title => "#{Setting.app_title}: #{l(:label_news_latest)}") %>
-<%= auto_discovery_link_tag(:atom, {:controller => 'projects', :action => 'activity', :key => User.current.rss_key, :format => 'atom'},
-                                   :title => "#{Setting.app_title}: #{l(:label_activity)}") %>
+	<%= auto_discovery_link_tag(:atom, {:controller => 'news', :action => 'index', :key => User.current.rss_key, :format => 'atom'},
+	:title => "#{Setting.app_title}: #{l(:label_news_latest)}") %>
+	<%= auto_discovery_link_tag(:atom, {:controller => 'projects', :action => 'activity', :key => User.current.rss_key, :format => 'atom'},
+	:title => "#{Setting.app_title}: #{l(:label_activity)}") %>
 <% end %>
