--- a/public/themes/basecamp/stylesheets/taska_themed.css
+++ b/public/themes/basecamp/stylesheets/taska_themed.css
@@ -15,3 +15,5 @@
 #top-right-menu .pipe {color: #999; padding-left: 5px; padding-right: 5px; }
 
 #header h1 a { padding-left: 10px; font-size: 12px; color: #999; }
+
+.contextual { color: #AAA; margin-top: 9px; }
